--- a/css/styles.css
+++ b/css/styles.css
@@ -11,31 +11,30 @@ html, body {
 
 /* title and navbar section */
 
-
-
-
 #navbar-section {
   flex: 0 1 auto;
   position: relative;
+}
 
+.button-col {
+  text-align: center;
 }
 
 .navbar {
   background-color: #97d1c9;
+  /* padding: .5rem 1rem; */
 }
 
 .navbar-brand {
-  font-size: 20px;
+  font-size: 3rem;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+
 }
 
 .brand-col {
   text-align: center;
+  align-items: flex-start;
 }
-
-
-/* .nav-link {
-  padding: 0;
-} */
 
 .search-btn {
   margin-left: 2%;
@@ -45,19 +44,16 @@ html, body {
   justify-content: center;
 }
 
-.button-col {
-  text-align: center;
+.nav-link {
+  font-size: 1.5rem;
+  line-height: 2;
 }
-
-
-
 /* Carousel-section */
 .carousel-heading {
   text-align: center;
   padding: 2% 0;
   margin-bottom: 0;
   background-color: #dff1f5;
-
 }
 
 #carousel-section {
@@ -67,7 +63,6 @@ html, body {
   flex-flow: row;
   align-items: center;
   justify-content: center;
-
 }
 
 .container {
@@ -75,21 +70,20 @@ html, body {
   margin: 2%;
   width: 90%;
   /* background-color: #C1D7DB; */
+}
+
+
+h2 {
+  font-size: 3rem;
 
 }
 
-h2 {font-size: 2.5rem;}
-
 .word {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .meaning {
   font-size: 1.5rem;
-}
-
-.container:hover {
-  /* background-color: #6ca4ad; */
 }
 
 hr {
@@ -98,33 +92,29 @@ hr {
 }
 
 .carousel {
-max-width: 70%;
-flex: 1 1 auto;
-
+  max-width: 70%;
+  flex: 1 1 auto;
 }
-
-
 
 .carousel-control-next, .carousel-control-prev {
   visibility: hidden;
-display: block;
-color: black;
-background-color: black;
+  display: block;
+  color: black;
+  background-color: black;
 }
 
 .carousel-control-next-icon {
-visibility: visible;
-display: block;
-width: auto;
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-
+  visibility: visible;
+  display: block;
+  width: auto;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
 
 .carousel-control-prev-icon {
-visibility: visible;
-display: block;
-width: auto;
-background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E")
+  visibility: visible;
+  display: block;
+  width: auto;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E")
 }
 
 /* Categories section */
@@ -134,26 +124,27 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
-
-
 
 .cat-col {
   text-align: center;
   padding: 1% 0.5%;
   position: relative;
   max-width: auto;
-
 }
 
 .cat-p {
   position: absolute;
   color: #fff;
-  font-size: 2rem;
-  top: 50%;
+  background-color: #97d1c940;
+  font-size: 2.5rem;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 0 3% 1.3% 3%;
+  border-radius: 10%;
+  border: 1px solid;
+  border-color: #fff50;
 }
 
 #categories-section img {
@@ -203,13 +194,26 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
     position: absolute;
     width: 100%;
     background: #97d1c9;
+  }
 
+  .navbar-nav {
+    text-align: center;
+    padding-right: 5%;
+  }
+
+  .col-md-3 {
+    padding-right: 0;
+  }
+
+  .nav-link {
+    padding-right: 50%;
+  }
 }
 
-@media (max-width: 320px) {
+/* @media (max-width: 320px) {
   #categories-section img {
     width: 100%;
-    /* max-height: auto; */
+    max-height: auto;
     border-radius: 2%;
   }
 
@@ -217,6 +221,18 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.
     position: absolute;
     width: 100%;
     background: #97d1c9;
-    Ъ
-}
-}
+  }
+
+  .navbar-nav {
+    text-align: center;
+    padding-right: 5%;
+  }
+
+  .col-md-3 {
+    padding-right: 0;
+  }
+
+  .nav-link {
+    padding-right: 50%;
+  }
+} */
