--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ html, body {
   height: 100%;
 }
 
+.thewholething-container {
+  height: 100vh;
+}
+
 /* title and navbar section */
 
 #navbar-section {
