--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,6 @@
 html, body {
-  position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
+  height: 100%;
+  margin: 0;
 }
 
 .flexbox-container {
